Adding menu categories

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 
 <body>
     <h1>Artemis Gems</h1>
-    <h3>Bogota, Colombia</h3>
-    <h3>Villa De leyva, Colombia</h3>
-    <h2>+57 320 4911 562</h2>
+    <hr>
+    <ul>
+        <li>Perlas</li>
+        <li>Aretes</li>
+        <li>Dijes</li>
+        <li>Collares</li>
+        <li>Pulseras</li>
+    </ul>
 
 </body>
 
