Add Contact Page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
     <h1>Artemis Gems</h1>
     <hr>
     <ul>
-        <li>Perlas</li>
+        <li><a href="perlas.html">Perlas</a></li>
+        <li>Esmeraldas</li>
         <li>Aretes</li>
         <li>Dijes</li>
         <li>Collares</li>
         <li>Pulseras</li>
+        <li>Detalles</li>
+        <li>Locales</li>
+        <li><a href="contacto.html">Contactos</a></li>
+        <li>Mis Deseos</li>
+        <li>Mi Perfil</li>
     </ul>
 
 </body>
