--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
     <h1>Artemis Gems</h1>
     <hr>
     <ul>
-        <li><a href="perlas.html">Perlas</a></li>
-        <li>Esmeraldas</li>
+        <li><strong>Joyeria</strong></li>
         <li>Aretes</li>
         <li>Dijes</li>
         <li>Collares</li>
         <li>Pulseras</li>
-        <li>Detalles</li>
-        <li>Locales</li>
-        <li><a href="contacto.html">Contactos</a></li>
+        <br>
+        <li><a href="matrimonio.html">Amor & Boda</a></li>
+        <br>
+        <li><a href="perlas.html">Perlas</a></li>
+        <li>Esmeraldas</li>
+        <li>Diamantes</li>
+        <li>Gemas</li>
+        <li>Gemologia</li>
+        <br>
+        <li>Regalos</li>
+        <br>
+        <li>Boutiques</li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <br>
         <li>Mis Deseos</li>
         <li>Mi Perfil</li>
     </ul>
