icon as home click

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artemis Joyeria</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
+    <a href="index.html">
+        <img class="logo" src="images/logo.png" alt="logo-icon">
+    </a>
+
     <h1>Artemis Gems</h1>
     <hr>
     <ul>
@@ -27,12 +32,14 @@
         <li>Gemologia</li>
         <br>
         <li>Regalos</li>
+        <li>Servicios</li>
         <br>
         <li>Boutiques</li>
         <li><a href="contacto.html">Contacto</a></li>
         <br>
         <li>Mis Deseos</li>
         <li>Mi Perfil</li>
+        <li><a href="home.html">HOME</a></li>
     </ul>
 
 </body>
