--- a/perlas.html
+++ b/perlas.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <a href="index.html">
+        <img class="logo" src="images/logo.png" alt="logo-icon">
+    </a>
+
     <h1>Perlas</h1>
     <h4>Guia de Perlas</h4>
     <h4>Perlas de Mar</h4>
