--- a/contacto.html
+++ b/contacto.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactos Artemis</title>
-    <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
 <body>
+    <a href="index.html">
+        <img class="logo" src="images/logo.png" alt="logo-icon">
+    </a>
+
     <h1>Contactos</h1>
     <ul>
         <li>
