--- a/matrimonio.html
+++ b/matrimonio.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+    <a href="index.html">
+        <img class="logo" src="images/logo.png" alt="logo-icon">
+    </a>
+
     <h1>Amor & Boda </h1>
     <li>Anillos de Compromiso</li>
     <li>Guia Diamantes</li>
