--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artemis Joyeria</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         <li>Gemologia</li>
         <br>
         <li>Regalos</li>
-        <li>Servicios</li>
+        <li><a href="servicios.html">Servicios</a></li>
         <br>
         <li>Boutiques</li>
         <li><a href="contacto.html">Contacto</a></li>
