--- a/home.html
+++ b/home.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="favicon.ico">
 
 </head>
 
 <body>
     <div class="top">
-        <img src="images/cloud.png" alt="cloud img">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud img">
         <h1>Artemis</h1>
         <p>Jo<span class="joyeria" n>ye</span>ria</p>
-        <img src="images/cloud.png" alt="cloud img">
-        <img src="images/mountain.png" alt="mountain img">
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud img">
+        <img class="mountain" src="images/mountain.png" alt="mountain img">
     </div>
 
     <div class="middle">
