better list and div

--- a/home.html
+++ b/home.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <body>
     <div class="top">
         <img class="top-cloud" src="images/cloud.png" alt="cloud img">
-        <h1>Artemis</h1>
-        <p>Jo<span class="joyeria" n>ye</span>ria</p>
+        <h1 class="home-t"><a href="index.html">Artemis</a></h1>
+        <h3 class="home-h">Jo<span class="joyeria" n>ye</span>ria</h3>
+        <p class="home-p">Especialistas en Perlas & Gemas</p>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud img">
         <img class="mountain" src="images/mountain.png" alt="mountain img">
     </div>
