--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Artemis Joyeria</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,33 +15,73 @@
         <img class="logo" src="images/logo.png" alt="logo-icon">
     </a>
 
-    <h1>Artemis Gems</h1>
-    <hr>
-    <ul>
-        <li><strong>Joyeria</strong></li>
-        <li>Aretes</li>
-        <li>Dijes</li>
-        <li>Collares</li>
-        <li>Pulseras</li>
-        <br>
-        <li><a href="matrimonio.html">Amor & Boda</a></li>
-        <br>
-        <li><a href="perlas.html">Perlas</a></li>
-        <li>Esmeraldas</li>
-        <li>Diamantes</li>
-        <li>Gemas</li>
-        <li>Gemologia</li>
-        <br>
-        <li>Regalos</li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <br>
-        <li>Boutiques</li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <br>
-        <li>Mis Deseos</li>
-        <li>Mi Perfil</li>
-        <li><a href="home.html">HOME</a></li>
-    </ul>
+    <header class="header">
+        <div class="header_nav-container stick">
+            <div class="logo">
+                <h1 class="artemis">Artemis</h1>
+            </div>
+
+            <nav class="main-nav">
+
+                <ul>
+                    <li><a href="main-nav_link">1. Joyeria</a>
+                        <div class="sub-nav">
+                            <div class="sub-nav_inner">
+
+                                <!-- Categoria -->
+                                <div>
+                                    <h3>Categoria</h3>
+                                    <ul>
+                                        <li>
+                                            <a href="">
+                                                <span>Collares & Dijes</span>
+                                            </a>
+                                        </li>
+                                        <li>Pulseras</li>
+                                        <li>Aretes</li>
+                                        <li>Anillos</li>
+                                        <li>All</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <ol>Metales
+                        <li>Oro</li>
+                        <li>Plata</li>
+                        <li>Platino</li>
+                        <li>All</li>
+                    </ol>
+                    <ol>Gemas</ol>
+                    <ol>Colleciones
+                        <li>Aphrodite</li>
+                        <li>Athena</li>
+                        <li>Gaia v</li>
+                        <li>Hera</li>
+                        <li>All</li>
+
+                    </ol>
+                    <br>
+                    <li><a href="matrimonio.html">2.Amor & Boda</a></li>
+                    <br>
+                    <li><a href="perlas.html">3.Perlas</a></li>
+                    <li>4.Gemas</li>
+                    <li>5.Regalos</li>
+                    <br>
+                    <li><a href="servicios.html">6.Servicios</a></li>
+                    <li>7.Gemologia</li>
+                    <li><a href="contacto.html">8.Boutiques</a></li>
+                    <br>
+                    <li>Mis Deseos</li>
+                    <li>Mi Perfil</li>
+                    <li><a href="home.html">HOME</a></li>
+                </ul>
+
+            </nav>
+        </div>
+    </header>
+
 
 </body>
 
