adding class cta

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -24,23 +26,46 @@
             <nav class="main-nav">
 
                 <ul>
-                    <li><a href="main-nav_link">1. Joyeria</a>
+                    <li><a class="main-nav_link">1. Joyeria</a>
                         <div class="sub-nav">
                             <div class="sub-nav_inner">
 
-                                <!-- Categoria -->
+                                <!-- Articulo -->
                                 <div>
-                                    <h3>Categoria</h3>
+                                    <h4>Articulo</h4>
                                     <ul>
                                         <li>
-                                            <a href="">
-                                                <span>Collares & Dijes</span>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Collares & Dijes</span>
+                                                </span>
                                             </a>
                                         </li>
-                                        <li>Pulseras</li>
-                                        <li>Aretes</li>
-                                        <li>Anillos</li>
-                                        <li>All</li>
+                                        <li> <a href="" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Pulsera</span>
+                                                </span>
+                                            </a>
+                                        </li>
+                                        <li> <a href="" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Aretes</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li> <a href="" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Anillos </span>
+                                                </span>
+                                            </a>
+                                        </li>
+                                        <li> <a href="" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">All</span>
+                                                </span>
+                                            </a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
