Collapsable sub-nav

--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 
 <body>
     <a href="index.html">
-        <img class="logo" src="images/logo.png" alt="logo-icon">
+        <img class="logo" src="images/logo.png" alt="artemis-icon">
     </a>
 
     <header class="header">
         <div class="header_nav-container stick">
-            <div class="logo">
+            <div>
                 <h1 class="artemis">Artemis</h1>
             </div>
 
             <nav class="main-nav">
-
                 <ul>
                     <li><a class="main-nav_link">1. Joyeria</a>
                         <div class="sub-nav">
@@ -41,62 +40,133 @@
                                                 </span>
                                             </a>
                                         </li>
-                                        <li> <a href="" class="cta">
+
+                                        <li>
+                                            <a href="#" class="cta">
                                                 <span class="cta-content">
-                                                    <span class="cta-text">Pulsera</span>
+                                                    <span class="cta-text">Pulseras</span>
                                                 </span>
                                             </a>
                                         </li>
-                                        <li> <a href="" class="cta">
+
+                                        <li>
+                                            <a href="#" class="cta">
                                                 <span class="cta-content">
                                                     <span class="cta-text">Aretes</span>
                                                 </span>
                                             </a>
                                         </li>
 
-                                        <li> <a href="" class="cta">
+                                        <li>
+                                            <a href="#" class="cta">
                                                 <span class="cta-content">
-                                                    <span class="cta-text">Anillos </span>
+                                                    <span class="cta-text">Anillos</span>
                                                 </span>
                                             </a>
                                         </li>
-                                        <li> <a href="" class="cta">
+
+                                        <li>
+                                            <a href="#" class="cta">
                                                 <span class="cta-content">
                                                     <span class="cta-text">All</span>
                                                 </span>
                                             </a>
                                         </li>
+
+                                    </ul>
+                                </div>
+
+                                <!-- Metales -->
+                                <div>
+                                    <h4>Metales</h4>
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Oro 18K</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Plata 925</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Platino</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">All</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                    </ul>
+                                </div>
+
+                                <!-- Coleciones -->
+                                <div>
+                                    <h4>Coleciones</h4>
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Aphrodite</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Athena</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">Gaia</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#" class="cta">
+                                                <span class="cta-content">
+                                                    <span class="cta-text">All</span>
+                                                </span>
+                                            </a>
+                                        </li>
+
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </li>
 
-                    <ol>Metales
-                        <li>Oro</li>
-                        <li>Plata</li>
-                        <li>Platino</li>
-                        <li>All</li>
-                    </ol>
-                    <ol>Gemas</ol>
-                    <ol>Colleciones
-                        <li>Aphrodite</li>
-                        <li>Athena</li>
-                        <li>Gaia v</li>
-                        <li>Hera</li>
-                        <li>All</li>
-
-                    </ol>
                     <br>
-                    <li><a href="matrimonio.html">2.Amor & Boda</a></li>
+                    <li><a href="matrimonio.html" class="main-nav_link">2.Amor & Boda</a></li>
                     <br>
-                    <li><a href="perlas.html">3.Perlas</a></li>
-                    <li>4.Gemas</li>
-                    <li>5.Regalos</li>
+                    <li><a href="perlas.html" class="main-nav_link">3.Perlas</a></li>
+                    <li><a class="main-nav_link">4.Gemas</a></li>
+                    <li><a class="main-nav_link">5.Regalos</a></li>
                     <br>
-                    <li><a href="servicios.html">6.Servicios</a></li>
-                    <li>7.Gemologia</li>
-                    <li><a href="contacto.html">8.Boutiques</a></li>
+                    <li><a href="servicios.html" class="main-nav_link">6.Servicios</a></li>
+                    <li><a href="servicios.html" class="main-nav_link">7.Gemologia</a></li>
+                    <li><a href="contacto.html" class="main-nav_link">8.Boutiques</a></li>
                     <br>
                     <li>Mis Deseos</li>
                     <li>Mi Perfil</li>
