--- a/matrimonio.html
+++ b/matrimonio.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrimonios Artemis</title>
     <link rel="stylesheet" href="css/main.css">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
+        </head>
 
 <body>
     <a href="index.html">
