--- a/home.html
+++ b/home.html
@@ -8,26 +8,83 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
+        </head>
 
-</head>
+
 
 <body>
-    <div class="top">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud img">
-        <h1 class="home-t"><a href="index.html">Artemis</a></h1>
-        <h3 class="home-h">Jo<span class="joyeria" n>ye</span>ria</h3>
-        <p class="home-p">Especialistas en Perlas & Gemas</p>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud img">
-        <img class="mountain" src="images/mountain.png" alt="mountain img">
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="left">
+                    <h1 id="header-logo" class="header-text">
+                        <a href="home.html">
+                            <span class="mask"></span>
+                            <span class="behind"></span>
+                            Hanna Mero
+                            <i class=""></i>
+                        </a>
+                    </h1>
+                </div>
+                <div class="right"></div>
+            </div>
+        </div>
+
+    </header>
+    <div class="top-container">
+        <img class="sun" src="images/sun.png" alt="cloud img">
+        <h1 class="h1-home"><a href="index.html">I´m Heidi</a></h1>
+        <h3 class="h3-home">a <span class="vegan" n>Vegan</span>Philomath</h3>
+        <img class="rainbow" src="images/rainbow.png" alt="rainbow img">
+        <img class="mountain" src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain img">
     </div>
 
-    <div class="middle">
-
+    <div class="middle-container">
+        <div class="profile">
+            <img class="avatar" src="images/avatar.png" alt="">
+            <h2 class="h2-home">Hello.</h2>
+            <p class="home-p">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor,
+                montes nulla distinctio.Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor,
+                montes nulla distinctio.
+            </p>
+        </div>
+        <hr class="hr-home">
+        <div class="skills">
+            <h2 class="h2-home">My Skills.</h2>
+            <div class="skill-row">
+                <img class="tube" src="https://media.giphy.com/media/fdG07xF24smvBim16E/giphy.gif" alt="">
+                <h3 class="h3-home">Lorem & Ipsum</h3>
+                <p class="home-p">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer
+                    vestibulum, nunc urna
+                    lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            </div>
+            <div class="skill-row">
+                <img class="" src="images/chillies.png" alt="">
+                <h3 class="h3-home">Lorem Ipsum Dolor</h3>
+                <p class="home-p">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                    interdum, lacus quis
+                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            </div>
+        </div>
+        <hr class="hr-home">
+        <div class="contact-me">
+            <h2 class="h2-home">Get In Touch</h2>
+            <h3 class="h3-home">Lorem ipsum dolor sit amet, non elit.</h3>
+            <p class="home-p">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec
+                dui, ornare erat.</p>
+            <a class="a-home btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
     </div>
 
-    <div class="bottom">
 
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p class="home-p">© 2018 Name Surname.</p>
     </div>
+
 </body>
 
 </html>
