--- a/perlas.html
+++ b/perlas.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perlas Artemis</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
-        </head>
+        rel="stylesheet">
 
 <body>
     <a href="index.html">
