--- a/servicios.html
+++ b/servicios.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios Artemis</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -13,8 +17,7 @@
         <img class="logo" src="images/logo.png" alt="logo-icon">
     </a>
 
-    <h1>Artemis Gems</h1>
-    <hr>
+    <h1>Servicios</h1>
     <ul>
         <li>Arreglos</li>
         <li>Anudados</li>
