200px reduce logo & Home playground

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/home.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
@@ -27,17 +27,34 @@
                         </a>
                     </h1>
                 </div>
-                <div class="right"></div>
+                <!-- left -->
+                <div class="right">
+                    <nav id="top-nav">
+                        <ul class="nav-list-transition">
+                            <li>
+                                <a href="" class="active">About</a>
+                            </li>
+                            <li>
+                                <a href="">Work</a>
+                            </li>
+                            <li>
+                                <a href="">Notes</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <!-- right -->
             </div>
+            <!-- row -->
         </div>
-
+        <!-- container -->
     </header>
     <div class="top-container">
         <img class="sun" src="images/sun.png" alt="cloud img">
         <h1 class="h1-home"><a href="index.html">I´m Heidi</a></h1>
         <h3 class="h3-home">a <span class="vegan" n>Vegan</span>Philomath</h3>
         <img class="rainbow" src="images/rainbow.png" alt="rainbow img">
-        <img class="mountain" src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain img">
+        <img class="mountain" src="images/hill.png" alt="">
     </div>
 
     <div class="middle-container">
@@ -60,7 +77,7 @@
                     lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
             </div>
             <div class="skill-row">
-                <img class="" src="images/chillies.png" alt="">
+                <img class="chilli" src="images/chillies.png" alt="">
                 <h3 class="h3-home">Lorem Ipsum Dolor</h3>
                 <p class="home-p">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
                     interdum, lacus quis
