--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                         <a href="home.html">
                             <span class="mask"></span>
                             <span class="behind"></span>
-                            Hanna Mero
+                            ...
                             <i class=""></i>
                         </a>
                     </h1>
@@ -52,15 +52,15 @@
     <div class="top-container">
         <img class="sun" src="images/sun.png" alt="cloud img">
         <h1 class="h1-home"><a href="index.html">I´m Heidi</a></h1>
-        <h3 class="h3-home">a <span class="vegan" n>Vegan</span>Philomath</h3>
+        <h3 class="h3-home">a <span class="vegan">Vegan</span>Philomath</h3>
         <img class="rainbow" src="images/rainbow.png" alt="rainbow img">
-        <img class="mountain" src="images/hill.png" alt="">
+        <img class="hills" src="images/hill.png" alt="hills">
     </div>
 
     <div class="middle-container">
         <div class="profile">
             <img class="avatar" src="images/avatar.png" alt="">
-            <h2 class="h2-home">Hello.</h2>
+            <h2 class="h2-home">Go Vegan.</h2>
             <p class="home-p">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor,
                 montes nulla distinctio.Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor,
                 montes nulla distinctio.
@@ -68,29 +68,28 @@
         </div>
         <hr class="hr-home">
         <div class="skills">
-            <h2 class="h2-home">My Skills.</h2>
+            <h2 class="h2-home">Save the Animals.</h2>
             <div class="skill-row">
                 <img class="tube" src="https://media.giphy.com/media/fdG07xF24smvBim16E/giphy.gif" alt="">
-                <h3 class="h3-home">Lorem & Ipsum</h3>
-                <p class="home-p">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer
+                <h3 class="h3-chili">Relax while I do the Job</h3>
+                <p class="tube-text">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer
                     vestibulum, nunc urna
                     lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
             </div>
             <div class="skill-row">
-                <img class="chilli" src="images/chillies.png" alt="">
-                <h3 class="h3-home">Lorem Ipsum Dolor</h3>
-                <p class="home-p">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
+                <img class="chili" src="images/chillies.png" alt="">
+                <h3 class="h3-chili">Hot Skills!</h3>
+                <p class="chili-text">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
                     interdum, lacus quis
                     mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
             </div>
         </div>
         <hr class="hr-home">
         <div class="contact-me">
-            <h2 class="h2-home">Get In Touch</h2>
-            <h3 class="h3-home">Lorem ipsum dolor sit amet, non elit.</h3>
+            <h2>Get in Touch!.</h2>
             <p class="home-p">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec
                 dui, ornare erat.</p>
-            <a class="a-home btn" href="mailto:name@email.com">CONTACT ME</a>
+            <button href="mailto:name@email.com" class="button">CONTACT HEIDI</button>
         </div>
     </div>
 
@@ -99,7 +98,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p class="home-p">© 2018 Name Surname.</p>
+        <p>© 2020 Heidi Romero.</p>
     </div>
 
 </body>
