--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artemis Joyeria</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- Bootstrap -->
+    <!-- <link rel="stylesheet" href="css/item_detail.css"> -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  -->
+
     <link rel="icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
@@ -169,6 +173,7 @@
                     <br>
                     <li>Mis Deseos</li>
                     <li>Mi Perfil</li>
+                    <li><a href="item_detail.html">View</a> </li>
                     <li><a href="home.html">HOME</a></li>
                 </ul>
             </nav>
