--- a/matrimonio.html
+++ b/matrimonio.html
@@ -5,24 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrimonios Artemis</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/boda.css">
     <link rel="icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
         rel="stylesheet">
+</head>
+
+
 
 <body>
-    <a href="index.html">
-        <img class="logo" src="images/logo.png" alt="logo-icon">
-    </a>
+    <div class="top-container">
 
+        <header class="bodas">
+            <!-- <div class="page-title"> -->
+            <a href="index.html">
+                <img class="page-logo logo" src="images/logo.png" alt="logo-icon">
+            </a>
+            <h1 class="artemis">Artemis</h1>
 
-    <h1>Amor & Bodas </h1>
-    <li>Anillos de Compromiso</li>
-    <li>Guia Diamantes</li>
-    <li>Servicio de por Vida</li>
-    <li>Programa una cita con un especialista en Diamantes</li>
-    <li>Argollas de Matrimonio</li>
+            <nav class="navbar">
+                <ul>
+                    <li>Joyeria</li>
+                    <li class="active">Bodas</li>
+                    <li>Perlas</li>
+                    <li>Gemas</li>
+                    <li>Regalos</li>
+                    <li>Servicios</li>
+                    <li>Gemologia</li>
+                    <li>Boutiques</li>
+                </ul>
+            </nav>
+        </header>
+
+        <h2 class="page-title">Amor & Compromiso </h2>
+
+        <nav class="nav-sub" id="navBoda">
+            <ul>
+                <li>Anillos de Compromiso</li>
+                <li>Argollas de Matrimonio</li>
+                <br>
+                <li>Servicios & Garantias</li>
+                <li>Guia de Diamantes</li>
+                <li>Programa una cita con un especialista en Diamantes</li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="hero-banner">
+        💍💍
+    </div>
+
 
 </body>
 
