--- a/index.html
+++ b/index.html
@@ -173,8 +173,11 @@
                     <br>
                     <li>Mis Deseos</li>
                     <li>Mi Perfil</li>
-                    <li><a href="item_detail.html">View</a> </li>
+                    <br>
+                    <li><a href="item_detail.html">View</a></li>
                     <li><a href="home.html">HOME</a></li>
+                    <li><a href="trial/Matcha/index.html">Matcha</a></li>
+                    <li><a href="trial/TinDog/index.html">Tindog</a></li>
                 </ul>
             </nav>
         </div>
